--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,18 @@
 @tailwind utilities;
 
 body {
-  @apply antialiased;
-  @apply dark:bg-gray-800;
+  @apply antialiased dark:bg-gray-800;
+}
+
+.header-logo {
+  background: url(../images/crown-logo-kit/crown-logo.svg) no-repeat center;
+  background-size: contain;
+  display: block;
+}
+
+.dark .header-logo {
+  background: url(../images/crown-logo-kit/crown-logo-white.svg) no-repeat
+    center;
+  background-size: contain;
+  display: block;
 }
