--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,14 +7,13 @@ body {
 }
 
 .header-logo {
-  background: url(../images/crown-logo-kit/crown-logo.svg) no-repeat center;
+  background: url(../images/crown-logo-kit/crown-logo.svg) no-repeat;
   background-size: contain;
   display: block;
 }
 
 .dark .header-logo {
-  background: url(../images/crown-logo-kit/crown-logo-white.svg) no-repeat
-    center;
+  background: url(../images/crown-logo-kit/crown-logo-white.svg) no-repeat;
   background-size: contain;
   display: block;
 }
