--- a/src/styles/lexdo.css
+++ b/src/styles/lexdo.css
@@ -7,7 +7,7 @@
 }
 
 .lexdo a {
-  @apply text-indigo-600 hover:text-indigo-700 dark:text-indigo-200 dark:hover:text-indigo-50;
+  @apply text-indigo-600 hover:text-indigo-700;
 }
 
 .lexdo p {
